// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp SnapShot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`GifExpertApp should be show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Ready Player One"
      key="Ready Player One"
    />
    <GifGrid
      category="Zelda"
      key="Zelda"
    />
  </ol>
</Fragment>
`;
